--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "nuxt": "3.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "@nuxtjs/google-fonts": "^2.0.0"
   }
 }
