--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "nuxt": "3.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "@nuxtjs/google-fonts": "^2.0.0"
+    "animate.css": "^4.1.1"
   }
 }
